Adicionando inputs que irão receber os números

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </header>
         <section>
             <div id="dados">
-                <p>Início: </p>
-                <p>Fim:</p>
-                <p>Passo:</p>
+                <p>Início: <input type="number" name="inicio" id="txti"></p>
+                <p>Fim: <input type="number" name="fim" id="txtf"></p>
+                <p>Passo: <input type="number" name="passo" id="txtp"></p>
             </div>
             <div id="res">
                 Preparando a contagem...
