--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <p>Início: <input type="number" name="inicio" id="txti"></p>
                 <p>Fim: <input type="number" name="fim" id="txtf"></p>
                 <p>Passo: <input type="number" name="passo" id="txtp"></p>
+                <p><input type="button" value="Contar" onclick="contar()"></p>
             </div>
             <div id="res">
                 Preparando a contagem...
